--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,27 @@
 	Thx - Hardy
 -->
 
+    <string name="release_4_5">
+    • BLE/ANT+ sensors: reworked connection, writing and viewing received data to GPX \n\n
+    • Free backup for favorites and settings to \"OsmAnd Cloud\" \n\n
+    • New format for Terrain maps with 3D Relief support \n\n
+    • Tracks management: updated UI, added sorting, support of nested folders \n\n
+    • Android Auto: new start menu for access favorites, tracks and POI categories \n\n
+    • One list of widgets for the Top/Bottom panel \n\n
+    • New \"Train\" profile, allows to calculate railways routes \n\n
+    • Contour lines works with any \"Map source\" \n\n
+    • Expanded list of default actions for external keyboards \n\n
+    • Custom routing files, added options to delete or overwrite \n\n
+    • Added option to \"Announce deviation from the route\" \n\n
+    • Start screen: added option restore OsmAnd state from file \n\n
+    • Added \"Hazardous Materials\" classes Truck navigation in North America \n\n
+    • Added support of \"Via ferrata\" for pedestrian routing \n\n
+    • Added \"CAI\" scale for difficulty classification of the routes \n\n
+    • Fixed per-app language selection \n\n
+    • Added support for themed icons \n\n
+    • OsmAnd Cloud: added option to delete account \n\n
+    • Accessibility: touch target size for  buttons changed to 48 dp; fixed issue with map UI visible for screen readers \n\n
+    </string>    
     <string name="free_favorites_backup_description">Register in OsmAnd Cloud to get free backup for favorites and settings.</string>
     <string name="free_favorites_backup">Free Favorites Backup</string>
     <string name="get_osmand_cloud">Get OsmAnd Cloud</string>
