Implement new UI of "Allow via ferrata" dialog

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,10 @@
 	Thx - Hardy
 -->
 
+    <string name="shared_string_avoid">Avoid</string>
+    <string name="may_be_used_if_there_is_shortcut">May be used if there is a shortcut</string>
+    <string name="allow_via_ferrata_desc">A mountain route equipped with fixed cables, stemples, ladders, and bridges.</string>
+    <string name="allow_via_ferrata_title">Mountainside route (Via ferrata)</string>
     <string name="release_4_5">
     • BLE/ANT+ sensors: reworked connection, writing and viewing received data to GPX \n\n
     • Free backup for favorites and settings to \"OsmAnd Cloud\" \n\n
